[package]
name = "quba-server-rs"
version = "0.1.0"
authors = ["Quentin Barrand <quentin@quba.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = "0.4.0"
hyper = "0.13"
magick_rust = "0.12.0"
tokio = { version = "0.2", features = ["full"] }
tokio-core = "0.1"
