[package]
name = "quba-server-rs"
version = "0.1.0"
authors = ["Quentin Barrand <quentin@quba.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
domain = "0.4.0"
env_logger = "0.7.1"
http = "0.2"
hyper = "0.13"
lazy_static = "1.4.0"
log = "0.4"
magick_rust = "0.12.0"
tera = { version = "1", default-features = false }
tokio = { version = "0.2", features = ["full"] }
tokio-core = "0.1"
